--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,16 @@ language: python
 python:
   - "3.5"
   - "3.6"
+  - "3.7-dev"
 install:
   - pip install -r requirements-test.txt
   - pip install .
 script:
   - tmhmm -m TMHMM2.0.model -f test.fa
+deploy:
+  provider: pypi
+  user: dansondergaard
+  password:
+    secure: pkbpjsT030GRHjRvyaQIJVo3sq5YmUI03LlU1HLTFOvPq6qixsxBiWpfCybnhjfVvdRoYdUadcBhelCMkiwucDm2CwPI12wVH7toVZb1AhbNnq+QSILjTlSA+ry7y89XnRTodC9u9SfgA6LvKWs106lcUbZegZCCS6o3j9O7KTI=
+  distributions: "sdist bdist_wheel"
+
