--- a/conda/conda_build_config.yaml
+++ b/conda/conda_build_config.yaml
@@ -1,4 +1,10 @@
 python:
-    - 3.4
-    - 3.5
-    - 3.6
+  - 3.4
+#   - 3.5
+#   - 3.6
+#   - 3.7
+numpy:
+  - '1.9'
+target_platform:
+  - 'linux-64'
+  - 'osx-64'
