--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install -r requirements-test.txt
   - pip install .
 script:
-  - tmhmm -m TMHMM2.0.model -f test.fa
+  - tmhmm -f test.fa
 deploy:
   provider: pypi
   user: dansondergaard
