--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,27 @@
 language: python
-python:
-  - "3.5"
-  - "3.6"
-  - "3.7-dev"
+matrix:
+  include:
+    - os: linux
+      python: 3.4
+    - os: linux
+      python: 3.5
+    - os: linux
+      python: 3.6
+    - os: linux
+      python: 3.7
+    - os: osx
+      language: generic
+      env: TOXENV=py34
+    - os: osx
+      language: generic
+      env: TOXENV=py35
+    - os: osx
+      language: generic
+      env: TOXENV=py36
+    - os: osx
+      language: generic
+      env: TOXENV=py37
 install:
-  - pip install -r requirements-test.txt
   - pip install .
 script:
   - tmhmm -f test.fa
