--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,17 @@ matrix:
       python: 3.5
     - os: linux
       python: 3.6
-    - os: linux
-      python: 3.7
     - os: osx
       language: generic
-      env: TOXENV=py34
+      env: PYTHON_VERSION=py34
     - os: osx
       language: generic
-      env: TOXENV=py35
+      env: PYTHON_VERSION=py35
     - os: osx
       language: generic
-      env: TOXENV=py36
-    - os: osx
-      language: generic
-      env: TOXENV=py37
+      env: PYTHON_VERSION=py36
 install:
-  - pip install .
+  - ./.travis/install.sh
 script:
   - tmhmm -f test.fa
 deploy:
