--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,25 @@
-language: python
 matrix:
   include:
-    - os: linux
-      python: 3.5
-    - os: linux
-      python: 3.6
-    - os: osx
-      language: generic
-      env: PYTHON_VERSION=3.5.0
-    - os: osx
-      language: generic
-      env: PYTHON_VERSION=3.6.0
-install:
-  - ./.travis/install.sh
-script:
-  - pyenv activate venv && tmhmm -f test.fa
-deploy:
-  provider: pypi
-  user: dansondergaard
-  password:
-    secure: pkbpjsT030GRHjRvyaQIJVo3sq5YmUI03LlU1HLTFOvPq6qixsxBiWpfCybnhjfVvdRoYdUadcBhelCMkiwucDm2CwPI12wVH7toVZb1AhbNnq+QSILjTlSA+ry7y89XnRTodC9u9SfgA6LvKWs106lcUbZegZCCS6o3j9O7KTI=
-  distributions: "sdist bdist_wheel"
-  skip_cleanup: true
-  on:
-    tags: true
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+           PLAT=manylinux1_x86_64
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
+           PRE_CMD=linux32
+           PLAT=manylinux1_i686
+    - sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
+           PLAT=manylinux2010_x86_64
 
+install:
+  - docker pull $DOCKER_IMAGE
+
+script:
+  - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-wheels.sh
+  - ls wheelhouse/
