--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
 
 - script: |
     python -m pip install --upgrade pip wheel
-    python -m pip pip install -r requirements-build.txt
+    python -m pip install -r requirements-build.txt
   displayName: 'Install dependencies'
 
 - script: |
