--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r build-requirements.txt
+        pip install -r requirements-build.txt
     - name: Run on test file
       run: tmhmm -f test.fa
