--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -20,6 +20,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install wheel
         pip install -r requirements-build.txt
+        python setup.py build sdist bdist_wheel
+        ls -l build/
+    - name: 
     - name: Run on test file
       run: tmhmm -f test.fa
