--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -23,6 +23,6 @@ jobs:
         pip install wheel
         pip install -r requirements-build.txt
         python setup.py build sdist bdist_wheel
-        ls -l build/
+        ls -l dist/
     - name: Run on test file
       run: tmhmm -f test.fa
