--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Build Python package
 
 on: [push]
 
@@ -19,10 +19,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install wheel
+        python -m pip install --upgrade pip wheel
         pip install -r requirements-build.txt
+    - name: Build sdist and wheel
         python setup.py build sdist bdist_wheel
         ls -l dist/
-    - name: Run on test file
-      run: tmhmm -f test.fa
+    - uses: actions/upload-artifact@master
+      with:
+        name: dist
+        path: dist/
