--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -22,6 +22,7 @@ jobs:
         python -m pip install --upgrade pip wheel
         pip install -r requirements-build.txt
     - name: Build sdist and wheel
+      run: |
         python setup.py build sdist bdist_wheel
         ls -l dist/
     - uses: actions/upload-artifact@master
