--- a/.github/workflows/pythonlint.yml
+++ b/.github/workflows/pythonlint.yml
@@ -1,9 +1,9 @@
-name: Lint Python code
+name: Build Python package and publish
 
-on: [push]
+on: push
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-16.04
     steps:
       - uses: actions/checkout@v1
