--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,9 +1,40 @@
-name: Build Python package
+name: Build Python package and publish
 
-on: [push]
+on:
+  push:
+    tags:
+      - "v*.*.*-*"
 
 jobs:
-  build:
+  build-sdist:
+    needs:
+      - lint
+    runs-on: ubuntu-16.03
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip wheel
+          pip install -r requirements-build.txt
+
+      - name: Build sdist and wheel
+        run: |
+          python setup.py build sdist
+          ls -l dist/
+
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: dist/*
+
+  build-wheels:
+    needs:
+      - lint
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -23,9 +54,11 @@ jobs:
 
       - name: Build sdist and wheel
         run: |
-          python setup.py build sdist bdist_wheel
+          python setup.py build bdist_wheel
           ls -l dist/
-      - uses: actions/upload-artifact@master
+
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: dist
-          path: dist/
+          files: dist/*
