--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-16.03
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.5
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.5
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel
@@ -30,7 +30,7 @@ jobs:
         with:
           files: dist/*
 
-  deploy-wheel-${{ matrix.os }}-${{ matrix.python-version }}:
+  deploy-wheel:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
