--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -52,12 +52,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel twine pep517
+          python -m pip install --upgrade pip wheel twine
           python -m pip install -r requirements-build.txt
 
       - name: Build wheel
         run: |
-          python -m pep517.build --source --binary .
+          pythom setup.py sdist bdist_wheel
           ls -l dist/
 
       - name: "Check long_description"
