--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -33,8 +33,7 @@ jobs:
       - name: Build manylinux Python wheels
         uses: RalfG/python-wheels-manylinux-build@v0.2.2-manylinux2010_x86_64
         with:
-          python-versions: "cp35-cp35m cp36-cp36m cp37-cp37m cp38-cp38m"
-          build-requirements: "cython numpy"
+          python-versions: "cp35-cp35m cp36-cp36m cp37-cp37m"
           pip-wheel-args: "--no-deps"
 
       - name: "Check long_description"
