--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -34,6 +34,7 @@ jobs:
         uses: RalfG/python-wheels-manylinux-build@v0.2.2-manylinux2010_x86_64
         with:
           python-versions: "cp35-cp35m cp36-cp36m cp37-cp37m"
+          build-requirements: "cython numpy"
           pip-wheel-args: "--no-deps"
 
       - name: "Check long_description"
