--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -38,7 +38,7 @@ jobs:
           pip-wheel-args: "--no-deps"
 
       - name: "Check long_description"
-        run: "python -m twine check dist/*"
+        run: "python -m twine check wheelhouse/*"
 
       - name: Publish distribution package to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
