--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.5, 3.6, 3.7]
+        python-version: [3.7]
         os: [ubuntu-latest]
 
     steps:
@@ -45,11 +45,11 @@ jobs:
         with:
           password: ${{ secrets.test_pypi_password }}
           repository_url: https://test.pypi.org/legacy/
-          packages_dir: wheelhouse/
+          packages_dir: wheelhouse/*-manylinux*.whl
 
       - name: Publish distribution package to PyPI
         if: startsWith(github.event.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.pypi_password }}
-          packages_dir: wheelhouse/
+          packages_dir: wheelhouse/*-manylinux*.whl
