--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -40,16 +40,21 @@ jobs:
       - name: "Check long_description"
         run: "python -m twine check wheelhouse/*"
 
+      - name: "Copy manylinux wheels to upload dir"
+        run: |
+          mkdir -p upload/
+          cp wheelhouse/*-manylinux*.whl upload/
+
       - name: Publish distribution package to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.test_pypi_password }}
           repository_url: https://test.pypi.org/legacy/
-          packages_dir: wheelhouse/*-manylinux*.whl
+          packages_dir: upload/
 
       - name: Publish distribution package to PyPI
         if: startsWith(github.event.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.pypi_password }}
-          packages_dir: wheelhouse/*-manylinux*.whl
+          packages_dir: upload/
